Add Game tab / Detail page

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Lilac",
-  "name": "Lilac's World",
+  "short_name": "Boardgame Lab.",
+  "name": "Boardgame Lab.",
   "icons": [
     {
       "src": "favicon.ico",
