--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.1",
+    "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^6.15.4",
@@ -21,6 +22,7 @@
     "react-scripts": "4.0.3",
     "react-spinners": "^0.10.6",
     "react-toastify": "^7.0.3",
+    "react-truncate-markup": "^5.1.0",
     "redux": "^4.0.5",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
