--- a/config/config.env
+++ b/config/config.env
@@ -4,7 +4,6 @@ NODE_ENV=production
 #NODE_ENV=development
 
 DATABASE=mongodb
-#DATABASE=firebase
 
 MONGO_URI=mongodb+srv://badjin:jinkim@cluster0-m1trh.mongodb.net/board_game?retryWrites=true&w=majority
 
@@ -18,7 +17,8 @@ AUTH_EXPIRES_IN=1h
 ACTIVATE_EXPIRES_IN=15m
 RESET_EXPIRES_IN=15m
 
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://immense-stream-73207.herokuapp.com
+#FRONTEND_URL=http://localhost:3000
 
 PER_PAGE=10
 
