--- a/config/config.env
+++ b/config/config.env
@@ -1,7 +1,7 @@
 PORT=5000
 
-NODE_ENV=production
-#NODE_ENV=development
+#NODE_ENV=production
+NODE_ENV=development
 
 DATABASE=mongodb
 
@@ -17,8 +17,8 @@ AUTH_EXPIRES_IN=1h
 ACTIVATE_EXPIRES_IN=15m
 RESET_EXPIRES_IN=15m
 
-FRONTEND_URL=https://immense-stream-73207.herokuapp.com
-#FRONTEND_URL=http://localhost:3000
+#FRONTEND_URL=https://immense-stream-73207.herokuapp.com
+FRONTEND_URL=http://localhost:3000
 
 PER_PAGE=10
 
