--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.7.3",
     "axios": "^0.21.1",
     "emailjs-com": "^2.6.4",
+    "html-react-parser": "^1.2.6",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.1",
